[gd_scene load_steps=7 format=3 uid="uid://cf4rnh76i4xod"]

[ext_resource type="Script" path="res://Player.gd" id="1_5am13"]
[ext_resource type="AudioStream" uid="uid://cs1spyey7rir8" path="res://Audio/SFX - Death Explosion.ogg" id="2_xgixq"]
[ext_resource type="AudioStream" uid="uid://dty7pvcgf1g5h" path="res://Audio/SFX - Success.ogg" id="3_iw315"]
[ext_resource type="AudioStream" uid="uid://3grdli5usww0" path="res://Audio/SFX - Main engine thrust.ogg" id="4_fq7p3"]

[sub_resource type="CylinderMesh" id="CylinderMesh_kuw4o"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tr87c"]

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.758335, -0.914975, 18.7147)
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1_5am13")
torque_trust = 85.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_kuw4o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_tr87c")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xgixq")

[node name="SucessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_iw315")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_fq7p3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
